[gd_scene load_steps=2 format=3 uid="uid://ck4v60se1ta8y"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_2t420"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2t420")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 420.0
offset_top = 151.0
offset_right = -420.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Settings" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Settings"]
layout_mode = 2

[node name="UnusedSpace" type="ReferenceRect" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Enter your Username"
horizontal_alignment = 1

[node name="UserName" type="LineEdit" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
placeholder_text = "Player"
alignment = 1
max_length = 24

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
text = "Mouse Sensitivity"
horizontal_alignment = 1

[node name="LookSensitivity" type="HSlider" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2

[node name="UnusedSpace2" type="ReferenceRect" parent="TabContainer/Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Join Server" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Join Server"]
layout_mode = 2

[node name="UnusedSpace" type="ReferenceRect" parent="TabContainer/Join Server/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Join Server/VBoxContainer"]
layout_mode = 2
text = "Enter the IP and Port here"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Join Server/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="IPAddressInput" type="LineEdit" parent="TabContainer/Join Server/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
placeholder_text = "localhost"
alignment = 1

[node name="PortInput" type="LineEdit" parent="TabContainer/Join Server/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "11037"
alignment = 1

[node name="UnusedSpace2" type="ReferenceRect" parent="TabContainer/Join Server/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="JoinButton" type="Button" parent="TabContainer/Join Server/VBoxContainer"]
layout_mode = 2
text = "Join!"

[node name="Host Server" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Host Server"]
layout_mode = 2

[node name="UnusedSpace" type="ReferenceRect" parent="TabContainer/Host Server/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Host Server/VBoxContainer"]
layout_mode = 2
text = "Enter the Port here"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Host Server/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PortInput" type="LineEdit" parent="TabContainer/Host Server/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "11037"
alignment = 1

[node name="UPnPCheckBox" type="CheckBox" parent="TabContainer/Host Server/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Use UPnP"

[node name="UnusedSpace2" type="ReferenceRect" parent="TabContainer/Host Server/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HostButton" type="Button" parent="TabContainer/Host Server/VBoxContainer"]
layout_mode = 2
text = "Host!"

[node name="Instructions" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 32.0
offset_right = 389.0
offset_bottom = 396.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
text = "=================
CRIMSON CARNAGE
=================
~~~Early Testing~~~
Version Indev-4

Left Click = Horizontal, 45 damage
Right Click = Vertical, 45 damage
Middle Click = Jab, 35 damage
Esc = capture/release mouse

Jabbing has longer reach but is slower
Your stick hits the environment

Warning: stuff might be buggy as heck
Plz report any issues you find to me"

[connection signal="value_changed" from="TabContainer/Settings/VBoxContainer/LookSensitivity" to="." method="_on_look_sensitivity_value_changed"]
[connection signal="pressed" from="TabContainer/Join Server/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="TabContainer/Host Server/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
